# Serwerek

./: README.md  client.c  main.c  przydatne komendy.md  server.c
Klient daytime TCP/: Zad1.cpp
client/: modifiedPom.xml  pom.xml
client/src/main/java/: module-info.java
client/src/main/java/com/client/skclient/: Client.java  ClientThread.java  Main.java  TextFile.java
client/src/main/java/com/client/skclient/controllers/: DeleteFileController.java  EditorController.java  LogInController.java  MainController.java  MenuController.java  NewFileController.java  SaveFileAsController.java
client/src/main/resources/com/client/skclient/: editor-view.fxml  main-new-file-view.fxml  main-view.fxml  new-file-view.fxml  open-file-view.fxml
klient/: CMakeLists.txt  client  client.c  main  main.c
klient-java/: pom.xml
klient-java/src/main/java/com/client/skclient/: Client.java  EditorThread.java  TextFile.java
klient-java/src/main/java/com/client/skclient/controllers/: EditorController.java  OpenFileController.java
klient-java/src/main/resources/com/client/skclient/: main-open-file-view.fxml
serwer/: CMakeLists.txt  client  client.c  main.c
serwer/Headers/: arrayfunctions.h  deletechar.h  executecommand.h  insertchar.h  lists.h
serwer/Headers/commands/: add.h  copy.h  delete.h  enter_file.h  list.h  message.h  rename.h  share.h  touch.h
serwer/Headers/connect_operation/: createconnectionfunctions.h  handlearrayofclients.h  handleconnection.h
serwer/Headers/data/: structs.h  variables.h
serwer/Headers/file_opearation/: createfolder.h  msleep.h  readstring.h  textAnimation.h
serwer/Headers/handler/: sigsegv.h
serwer/Headers/headers/: headers.h
serwer/Headers/thread/: threadfunctions.h
